# Garfieldpp-virgo

./: README.md
3HeTube/: He3Tube.C  README.md  ar_90.0_co2_10.0_1.0atm.gas  makefile
EleTransmission/: EleTransmission.C  README.md  makefile
GainParameter/: AnaResult.C  CMakeLists.txt  CeramicGEM.C  README.md  makefile  run.sh  run_drift.sh  run_gem.sh  run_induce.sh
GainParameter/GasFile/: ar_90_co2_10.gas
GainParameter/ansys/900V/: D_1kV_4mm_VGEM_900V_I_3kV_2mm.txt  NLIST.lis  PRNSOL.lis
GasFile/: CMakeLists.txt  GetData.sh  README.md  ReadGas.C  generate.C  makefile  read.C
StarTube/: README.md  StarTubeByAnsys.C  StarTubeByneBEM.C  makefile
StarTube/ansys/: ansys.txt
X-Ray/: AnaPitch.C  CMakeLists.txt  README.md  makefile  run.sh  x-ray.C  x-ray.py
X-Ray/ansys/: ANODE.lis  CATHODE.lis  CenterEF.lis  GEMDOWN.lis  GEMUP.lis  MPLIST.lis  PRNSOL.lis  ansys.txt
X-Ray/ansys/900V/: D_1kV_4mm_VGEM_900V_I_3kV_2mm.txt  ELIST.lis  MPLIST.lis  PRNSOL.lis
